# ReOS

./: .gitignore  .woodpecker.yml  ADR-VERIFICATION-BACKPORT.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  REPO_UNDERSTANDING_SYSTEM.md  benchmark-monitor.py  install-tauri-deps.sh  pyproject.toml  reos  run-tauri.sh  run.sh
.github/: ReOS_charter.md  copilot-instructions.md
apps/: README.md
apps/reos-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/reos-tauri/src-tauri/src/: kernel.rs  main.rs
benchmarks/: __init__.py  __main__.py  _test_plan_a.py  analysis.py  anthropic_provider.py  corpus.json  corpus.py  corpus_top50.json  db.py  generate_corpus.py  instrumented_provider.py  matching.py  migrate_add_pipeline_mode.py  models.py  runner.py
docs/: CLEANUP_SUMMARY.md  FOUNDATION.md  M1B_ARCHITECTURE.md  TALKING_ROCK_DIALECTICAL_HEALTH_FRAMEWORK.md  WORKFLOW_EXAMPLE.md  app-vision.md  atomic-operations.md  beginners-guide.md  blocks-api.md  cairn_architecture.md  classification.md  code_mode_architecture.md  git-integration-decision.md  memory-system.md  migration-new-packages.md  plan-benchmark-framework.md  plan-conversational-shell.md  plan-dual-mode-benchmark.md  plan-semantic-rag-integration.md  reasoning.md  riva-performance-strategy.md  rlhf-learning.md  security.md  tech-roadmap.md  testing-strategy.md  the-play.md  ui-migration-typescript.md  verification-layers.md
scripts/: analyze_verification_metrics.py  bootstrap.sh  reos-shell-integration.sh  run.sh
semantic layer/: SEMANTIC-LAYER-BUILD-INSTRUCTIONS.md  fetch-linux-corpus.sh
(+357 files in other folders)
